[tool.poetry]
name = "devops-task"
version = "0.1.0"
description = "A simple task for DevOps engineer interviews"
authors = ["Ayushman Dash <ayushman@neuralspace.ai"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
fastBPE = "^0.1.0"
regex = "^2020.11.13"
requests = "^2.25.0"
sacremoses = "^0.0.43"
subword-nmt = "^0.3.7"
torch = "^1.7.0"
omegaconf = "^2.0.5"
Hydra = "^2.5"
fairseq = "^0.10.1"
uvicorn = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
